--- a/AgentManagement/.gitignore
+++ b/AgentManagement/.gitignore
@@ -5,6 +5,8 @@ build/
 !**/src/test/**/build/
 
 ### IntelliJ IDEA ###
+.idea/workspace.xml
+.idea/misc.xml
 .idea/modules.xml
 .idea/jarRepositories.xml
 .idea/compiler.xml
@@ -40,5 +42,3 @@ bin/
 
 ### Mac OS ###
 .DS_Store
-.idea/wrokspace.xml
-.idea/misc.xml
